--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href="../css/style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
@@ -48,7 +48,7 @@
 	
 		
 		<div class="container-cover">
-			<img src="../images/pizza_banner.jpeg" style="width: 100%; height: 100%;">
+			<img src="images/pizza_banner.jpeg" style="width: 100%; height: 100%;">
 		</div>
 		<div class="container-about">
 			<h1 id="quote">	 Pizza is the world’s greatest food. Nothing says “I love you,” “I’m sorry,” or “Let’s be friends,” better than pizza. It’s a universal love language, and is perfect at any time, for any occasion, especially when you don’t know what to say. Here are our favorite pizza quotes from pizza lovers around the world, from celebrity Jennifer Lawrence to professional baseball star Yogi Berra.
@@ -58,7 +58,7 @@
 			<h2 id="title-pizza">Pizza</h2>
 				<div class="pizza-holder">
 					<div class="pizza">
-						<img src="../images/4.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/4.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Margherita </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm" value="32margherita">
@@ -74,7 +74,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/3.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/3.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Salami </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm2" value="32margherita">
@@ -90,7 +90,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/2.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/2.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Salmon </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm3" value="32salmon">
@@ -106,7 +106,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/5.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/5.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Con Tutto </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm4" value="32contutto">
@@ -122,7 +122,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/6.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/6.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Vegetarian </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm5" value="32vegetarian">
@@ -138,7 +138,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/7.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/7.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Prosciutto Funghi </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm6" value="32prosciuttofunghi">
@@ -154,7 +154,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/8.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/8.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Capriciossa </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm7" value="32capriciossa">
@@ -170,7 +170,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/9.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/9.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Quatro Staggioni </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm8" value="32quatro">
@@ -186,7 +186,7 @@
 						</form>	
 					</div>
 					<div class="pizza">
-						<img src="../images/10.jpg" style="width: 40vh; height: 30vh ">
+						<img src="images/10.jpg" style="width: 40vh; height: 30vh ">
 						<h3>Prosciutto </h3>
 						<form>
 							<input class="pizza-type" name="pizza" type="radio" id="32cm9" value="32prosciutto">
